--- a/package.json
+++ b/package.json
@@ -14,25 +14,25 @@
     "test": "npm run lint && npm run build"
   },
   "dependencies": {
-    "@resin/abstract-sql-compiler": "^3.0.0",
-    "@resin/lf-to-abstract-sql": "^1.0.3",
-    "@resin/odata-parser": "~0.2.0",
-    "@resin/odata-to-abstract-sql": "^1.0.2",
+    "@resin/abstract-sql-compiler": "^3.3.0",
+    "@resin/lf-to-abstract-sql": "^1.0.4",
+    "@resin/odata-parser": "^0.2.3",
+    "@resin/odata-to-abstract-sql": "^1.1.0",
     "@resin/sbvr-parser": "^0.1.0",
     "@resin/sbvr-types": "^1.0.0",
     "@types/bluebird": "3.5.16",
-    "@types/body-parser": "1.16.3",
-    "@types/compression": "0.0.33",
+    "@types/body-parser": "1.16.8",
+    "@types/compression": "0.0.35",
     "@types/cookie-parser": "1.3.30",
-    "@types/express": "4.0.35",
-    "@types/express-session": "1.15.0",
-    "@types/lodash": "4.14.78",
-    "@types/method-override": "0.0.29",
-    "@types/multer": "0.0.33",
-    "@types/mysql": "^0.0.34",
+    "@types/express": "4.11.0",
+    "@types/express-session": "1.15.6",
+    "@types/lodash": "4.14.92",
+    "@types/method-override": "0.0.31",
+    "@types/multer": "1.3.6",
+    "@types/mysql": "0.0.34",
     "@types/node": "6.0.90",
     "@types/passport": "0.3.3",
-    "@types/passport-local": "1.0.30",
+    "@types/passport-local": "1.0.32",
     "@types/pg": "6.1.43",
     "@types/websql": "0.0.27",
     "bluebird": "^3.5.0",
@@ -66,7 +66,7 @@
     "ometa-loader": "0.0.1",
     "raw-loader": "^0.5.1",
     "require-npm4-to-publish": "^1.0.0",
-    "resin-lint": "^1.3.1",
+    "resin-lint": "^1.5.0",
     "ts-loader": "^2.0.3",
     "typescript": "^2.6.2",
     "umd-require-webpack-plugin": "0.0.1",
