--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@types/node": "6.0.90",
     "@types/passport": "0.3.3",
     "@types/passport-local": "1.0.32",
-    "@types/pg": "6.1.43",
+    "@types/pg": "^7.4.4",
     "@types/websql": "0.0.27",
     "bluebird": "^3.5.0",
     "coffee-script": "~1.12.2",
@@ -42,6 +42,7 @@
     "lodash": "^4.0.0",
     "memoizee": "^0.4.1",
     "ometa-js": "^1.4.2",
+    "pg-connection-string": "^2.0.0",
     "pinejs-client": "^4.0.0",
     "typed-error": "^2.0.0"
   },
@@ -84,7 +85,7 @@
     "mysql": "^2.1.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "pg": "^6.0.0",
+    "pg": "^7.4.1",
     "serve-static": "^1.9.1",
     "ts-node": "^3.0.4"
   },
