--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/express": "4.11.0",
     "@types/express-session": "1.15.6",
     "@types/lodash": "4.14.92",
+    "@types/memoizee": "^0.4.2",
     "@types/method-override": "0.0.31",
     "@types/multer": "1.3.6",
     "@types/mysql": "0.0.34",
