--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "@types/multer": "1.3.6",
     "@types/mysql": "0.0.34",
     "@types/node": "6.0.90",
-    "@types/passport": "0.3.3",
-    "@types/passport-local": "1.0.32",
+    "@types/passport": "0.3.5",
+    "@types/passport-local": "1.0.33",
+    "@types/passport-strategy": "0.2.32",
     "@types/pg": "6.1.43",
     "@types/websql": "0.0.27",
     "bluebird": "^3.5.0",
