Use `Object.freeze` to prevent mutating the cached abstract sql which allows us to skip a costly Object.freeze
Change-type: major

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/websql": "0.0.27",
     "bluebird": "^3.5.0",
     "coffee-script": "~1.12.2",
+    "deep-freeze": "0.0.1",
     "express-session": "^1.10.3",
     "lodash": "^4.0.0",
     "memoizee": "^0.4.1",
