Add node 10 to the test matrix.
Change-type: patch

--- a/circle.yml
+++ b/circle.yml
@@ -27,6 +27,12 @@ jobs:
     working_directory: ~/node-8
     steps: *buildSteps
 
+  node-10:
+    docker:
+      - image: circleci/node:10
+    working_directory: ~/node-10
+    steps: *buildSteps
+
   deploy:
     # For this to work NPM_TOKEN must be set for the account used for publishing
     docker:
@@ -59,11 +65,17 @@ workflows:
           filters:
             tags:
               only: /.*/
+      - node-10:
+          # Run for all tags (required to allow the deploy to trigger on version tags)
+          filters:
+            tags:
+              only: /.*/
       - deploy:
           # Deploy passing builds if they're tagged with a version
           requires:
             - node-6
             - node-8
+            - node-10
           filters:
             tags:
               only: /^v\d+\.\d+\.\d+$/
