Switch types to using generated declaration files, this solves issues where the global typings we use are unavailable for dependent typescript projects.
Change-type: patch

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
 		"rootDir": "src",
 		"sourceMap": true,
 		"strictNullChecks": true,
-		"target": "es2015"
+		"target": "es2015",
+		"declaration": true
 	},
 	"include": [
 		"src/**/*.ts",
