--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/passport-local": "1.0.33",
     "@types/passport-strategy": "0.2.32",
     "@types/pg": "6.1.43",
+    "@types/pg-connection-string": "2.0.0",
     "@types/websql": "0.0.27",
     "bluebird": "^3.5.0",
     "coffee-script": "~1.12.2",
@@ -82,6 +83,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pg": "^6.0.0",
+    "pg-connection-string": "^2.0.0",
     "serve-static": "^1.9.1",
     "ts-node": "^3.0.4"
   },
