--- a/package.json
+++ b/package.json
@@ -13,28 +13,28 @@
     "test": "npm run lint && npm run build"
   },
   "dependencies": {
-    "@resin/abstract-sql-compiler": "^5.3.2",
+    "@resin/abstract-sql-compiler": "^5.3.3",
     "@resin/lf-to-abstract-sql": "^2.0.5",
     "@resin/odata-parser": "^0.3.5",
     "@resin/odata-to-abstract-sql": "^2.2.1",
     "@resin/sbvr-parser": "^0.1.4",
     "@resin/sbvr-types": "^1.4.2",
-    "@types/bluebird": "3.5.16",
-    "@types/body-parser": "1.16.8",
-    "@types/compression": "0.0.35",
-    "@types/cookie-parser": "1.3.30",
-    "@types/express": "4.11.0",
-    "@types/express-session": "1.15.6",
-    "@types/lodash": "4.14.92",
-    "@types/memoizee": "^0.4.2",
+    "@types/bluebird": "3.5.23",
+    "@types/body-parser": "1.17.0",
+    "@types/compression": "0.0.36",
+    "@types/cookie-parser": "1.4.1",
+    "@types/express": "4.16.0",
+    "@types/express-session": "1.15.10",
+    "@types/lodash": "4.14.116",
+    "@types/memoizee": "0.4.2",
     "@types/method-override": "0.0.31",
-    "@types/multer": "1.3.6",
+    "@types/multer": "1.3.7",
     "@types/mysql": "0.0.34",
-    "@types/node": "6.0.90",
+    "@types/node": "6.0.116",
     "@types/passport": "0.3.5",
     "@types/passport-local": "1.0.33",
-    "@types/passport-strategy": "0.2.32",
-    "@types/pg": "6.1.43",
+    "@types/passport-strategy": "0.2.34",
+    "@types/pg": "6.1.47",
     "@types/pg-connection-string": "2.0.0",
     "@types/websql": "0.0.27",
     "bluebird": "^3.5.0",
@@ -42,13 +42,13 @@
     "deep-freeze": "0.0.1",
     "express-session": "^1.10.3",
     "lodash": "^4.0.0",
-    "memoizee": "^0.4.13",
+    "memoizee": "^0.4.14",
     "ometa-js": "^1.5.2",
-    "pinejs-client-core": "^5.3.0",
+    "pinejs-client-core": "^5.3.1",
     "typed-error": "^2.0.0"
   },
   "devDependencies": {
-    "coffee-loader": "^0.7.2",
+    "coffee-loader": "^0.7.3",
     "grunt": "^1.0.3",
     "grunt-check-dependencies": "^1.0.0",
     "grunt-cli": "^1.0.0",
@@ -65,7 +65,7 @@
     "raw-loader": "^0.5.1",
     "require-npm4-to-publish": "^1.0.0",
     "resin-lint": "^1.5.7",
-    "ts-loader": "^2.0.3",
+    "ts-loader": "^2.3.7",
     "typescript": "^3.0.1",
     "umd-require-webpack-plugin": "0.0.1",
     "webpack": "^1.5.3",
