--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   },
   "dependencies": {
     "@resin/abstract-sql-compiler": "^5.3.3",
-    "@resin/lf-to-abstract-sql": "^2.0.5",
-    "@resin/odata-parser": "^0.3.5",
-    "@resin/odata-to-abstract-sql": "^2.2.1",
+    "@resin/lf-to-abstract-sql": "^2.0.6",
+    "@resin/odata-parser": "^0.3.6",
+    "@resin/odata-to-abstract-sql": "^2.2.3",
     "@resin/sbvr-parser": "^0.1.4",
     "@resin/sbvr-types": "^1.4.2",
-    "@types/bluebird": "3.5.23",
+    "@types/bluebird": "^3.5.24",
     "@types/body-parser": "1.17.0",
     "@types/compression": "0.0.36",
     "@types/cookie-parser": "1.4.1",
@@ -30,28 +30,27 @@
     "@types/method-override": "0.0.31",
     "@types/multer": "1.3.7",
     "@types/mysql": "0.0.34",
-    "@types/node": "6.0.116",
-    "@types/passport": "0.3.5",
+    "@types/node": "^6.0.117",
+    "@types/passport": "^0.3.5",
     "@types/passport-local": "1.0.33",
-    "@types/passport-strategy": "0.2.34",
-    "@types/pg": "6.1.47",
-    "@types/pg-connection-string": "2.0.0",
+    "@types/passport-strategy": "^0.2.35",
+    "@types/pg": "^6.1.47",
     "@types/websql": "0.0.27",
-    "bluebird": "^3.5.0",
+    "bluebird": "^3.5.2",
     "coffee-script": "~1.12.2",
     "deep-freeze": "0.0.1",
     "express-session": "^1.10.3",
     "lodash": "^4.0.0",
     "memoizee": "^0.4.14",
-    "ometa-js": "^1.5.2",
-    "pinejs-client-core": "^5.3.1",
+    "ometa-js": "^1.5.3",
+    "pinejs-client-core": "^5.3.3",
     "typed-error": "^2.0.0"
   },
   "devDependencies": {
     "coffee-loader": "^0.7.3",
     "grunt": "^1.0.3",
     "grunt-check-dependencies": "^1.0.0",
-    "grunt-cli": "^1.0.0",
+    "grunt-cli": "^1.3.1",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-coffee": "git+https://github.com/gruntjs/grunt-contrib-coffee.git#72e1818410c6c0371e4b5c5441c6993a4e61e869",
     "grunt-contrib-concat": "^1.0.0",
@@ -66,7 +65,7 @@
     "require-npm4-to-publish": "^1.0.0",
     "resin-lint": "^1.5.7",
     "ts-loader": "^2.3.7",
-    "typescript": "^3.0.1",
+    "typescript": "^3.0.3",
     "umd-require-webpack-plugin": "0.0.1",
     "webpack": "^1.5.3",
     "webpack-dev-server": "^1.7.0"
