Add a prepare script so it is possible to install via git
Change-type: patch
Signed-off-by: Pagan Gazzard <page@resin.io>

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "Apache-2.0",
   "scripts": {
     "prepublish": "require-npm4-to-publish",
-    "prepublishOnly": "npm test",
+    "prepublishOnly": "npm run lint",
+    "prepare": "npm run build",
     "build": "grunt build",
     "webpack-browser": "grunt webpack:browser",
     "lint": "resin-lint src Gruntfile.coffee",
