--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
 		"sourceMap": true,
 		"strictNullChecks": true,
 		"target": "es2015",
-		"declaration": true
+		"declaration": true,
+		"skipLibCheck": true
 	},
 	"include": [
 		"src/**/*.ts",
