--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "test": "npm run lint && npm run build"
   },
   "dependencies": {
-    "@resin/abstract-sql-compiler": "^5.3.3",
-    "@resin/lf-to-abstract-sql": "^2.0.7",
+    "@resin/abstract-sql-compiler": "^6.0.0",
+    "@resin/lf-to-abstract-sql": "^2.0.8",
     "@resin/odata-parser": "^0.3.6",
     "@resin/odata-to-abstract-sql": "^2.2.5",
     "@resin/sbvr-parser": "^0.1.4",
-    "@resin/sbvr-types": "^1.4.2",
+    "@resin/sbvr-types": "^2.0.0",
     "@types/bluebird": "^3.5.24",
     "@types/body-parser": "1.17.0",
     "@types/compression": "0.0.36",
@@ -32,7 +32,7 @@
     "@types/method-override": "0.0.31",
     "@types/multer": "1.3.7",
     "@types/mysql": "0.0.34",
-    "@types/node": "^6.0.117",
+    "@types/node": "^6.14.0",
     "@types/passport": "^0.3.5",
     "@types/passport-local": "1.0.33",
     "@types/passport-strategy": "^0.2.35",
@@ -67,13 +67,13 @@
     "require-npm4-to-publish": "^1.0.0",
     "resin-lint": "^1.5.7",
     "ts-loader": "^2.3.7",
-    "typescript": "^3.0.3",
+    "typescript": "^3.1.2",
     "umd-require-webpack-plugin": "0.0.1",
     "webpack": "^1.5.3",
     "webpack-dev-server": "^1.7.0"
   },
   "optionalDependencies": {
-    "bcrypt": "~0.8.0",
+    "bcrypt": "^3.0.1",
     "body-parser": "^1.12.0",
     "compression": "^1.4.1",
     "cookie-parser": "^1.3.4",
