--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "test": "npm run lint && npm run build"
   },
   "dependencies": {
-    "@resin/abstract-sql-compiler": "^6.0.1",
-    "@resin/lf-to-abstract-sql": "^2.0.8",
+    "@resin/abstract-sql-compiler": "^6.1.0",
+    "@resin/lf-to-abstract-sql": "^2.1.0",
     "@resin/odata-parser": "^1.0.0",
-    "@resin/odata-to-abstract-sql": "^2.3.0",
-    "@resin/sbvr-parser": "^0.1.4",
+    "@resin/odata-to-abstract-sql": "^2.4.0",
+    "@resin/sbvr-parser": "^0.2.1",
     "@resin/sbvr-types": "^2.0.0",
     "@types/bluebird": "^3.5.24",
     "@types/body-parser": "1.17.0",
@@ -26,13 +26,13 @@
     "@types/cookie-parser": "1.4.1",
     "@types/deep-freeze": "^0.1.1",
     "@types/express": "4.16.0",
-    "@types/express-session": "1.15.10",
-    "@types/lodash": "4.14.116",
+    "@types/express-session": "^1.15.11",
+    "@types/lodash": "^4.14.117",
     "@types/memoizee": "0.4.2",
     "@types/method-override": "0.0.31",
     "@types/multer": "1.3.7",
     "@types/mysql": "0.0.34",
-    "@types/node": "^6.14.0",
+    "@types/node": "^6.14.1",
     "@types/passport": "^0.3.5",
     "@types/passport-local": "1.0.33",
     "@types/passport-strategy": "^0.2.35",
@@ -65,9 +65,9 @@
     "ometa-loader": "0.0.1",
     "raw-loader": "^0.5.1",
     "require-npm4-to-publish": "^1.0.0",
-    "resin-lint": "^1.5.7",
+    "resin-lint": "^2.0.1",
     "ts-loader": "^2.3.7",
-    "typescript": "^3.1.4",
+    "typescript": "^3.1.6",
     "umd-require-webpack-plugin": "0.0.1",
     "webpack": "^1.5.3",
     "webpack-dev-server": "^1.7.0"
