--- a/package.json
+++ b/package.json
@@ -48,11 +48,11 @@
     "typed-error": "^2.0.0"
   },
   "devDependencies": {
-    "coffee-loader": "^0.7.3",
+    "coffee-loader": "^0.9.0",
     "grunt": "^1.0.3",
     "grunt-check-dependencies": "^1.0.0",
-    "grunt-cli": "^1.3.1",
-    "grunt-contrib-clean": "^1.0.0",
+    "grunt-cli": "^1.3.2",
+    "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-coffee": "^2.0.0",
     "grunt-contrib-concat": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
@@ -60,13 +60,14 @@
     "grunt-rename": "^0.1.4",
     "grunt-ts": "^6.0.0-beta.21",
     "grunt-webpack": "^1.0.8",
-    "load-grunt-tasks": "^3.5.0",
-    "ometa-loader": "0.0.1",
+    "json-loader": "^0.5.7",
+    "load-grunt-tasks": "^4.0.0",
     "raw-loader": "^0.5.1",
     "require-npm4-to-publish": "^1.0.0",
     "resin-lint": "^2.0.1",
-    "ts-loader": "^2.3.7",
+    "ts-loader": "^3.5.0",
     "typescript": "^3.1.6",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "umd-require-webpack-plugin": "0.0.1",
     "webpack": "^1.5.3",
     "webpack-dev-server": "^1.7.0"
