--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@types/pg": "^6.1.47",
     "@types/websql": "0.0.27",
     "bluebird": "^3.5.2",
-    "coffeescript": "~1.12.2",
+    "coffeescript": "^2.3.2",
     "deep-freeze": "0.0.1",
     "express-session": "^1.10.3",
     "lodash": "^4.17.11",
@@ -54,7 +54,7 @@
     "grunt-check-dependencies": "^1.0.0",
     "grunt-cli": "^1.3.1",
     "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-coffee": "git+https://github.com/gruntjs/grunt-contrib-coffee.git#72e1818410c6c0371e4b5c5441c6993a4e61e869",
+    "grunt-contrib-coffee": "^2.0.0",
     "grunt-contrib-concat": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-gitinfo": "^0.1.8",
