--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "bluebird": "^3.5.3",
     "coffeescript": "^2.3.2",
     "deep-freeze": "0.0.1",
+    "eventemitter3": "^3.1.0",
     "express-session": "^1.10.3",
     "lodash": "^4.17.11",
     "memoizee": "^0.4.14",
