--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
 		"strictNullChecks": true,
 		"target": "es2015",
 		"declaration": true,
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"resolveJsonModule": true
 	},
 	"include": [
 		"src/**/*.ts",
