--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prepare": "npm run build",
     "build": "grunt build",
     "webpack-browser": "grunt webpack:browser",
-    "lint": "resin-lint src Gruntfile.coffee && resin-lint --typescript src",
+    "lint": "resin-lint src Gruntfile.coffee && resin-lint --typescript src build",
     "test": "npm run lint && npm run build",
     "prettify": "prettier --config ./node_modules/resin-lint/config/.prettierrc --write \"{src,test,typings}/**/*.ts\""
   },
@@ -53,6 +53,7 @@
     "typed-error": "^2.0.0"
   },
   "devDependencies": {
+    "@types/webpack": "^1.12.36",
     "coffee-loader": "^0.9.0",
     "grunt": "^1.0.3",
     "grunt-check-dependencies": "^1.0.0",
@@ -71,6 +72,7 @@
     "require-npm4-to-publish": "^1.0.0",
     "resin-lint": "^2.0.1",
     "ts-loader": "^3.5.0",
+    "ts-node": "^8.0.1",
     "typescript": "^3.2.4",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "umd-require-webpack-plugin": "0.0.1",
@@ -91,7 +93,7 @@
     "pg": "^6.0.0",
     "pg-connection-string": "^2.0.0",
     "serve-static": "^1.9.1",
-    "ts-node": "^3.0.4"
+    "ts-node": "^8.0.1"
   },
   "engines": {
     "node": ">=4.0.0",
