--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "prepublishOnly": "npm run lint",
     "prepare": "npm run build",
     "build": "grunt build",
-    "webpack-browser": "grunt webpack:browser",
+    "webpack-browser": "grunt browser",
+    "webpack-module": "grunt module",
+    "webpack-server": "grunt server",
+    "webpack-build": "npm run webpack-browser && npm run webpack-module && npm run webpack-server",
     "lint": "resin-lint src && resin-lint --typescript src build Gruntfile.ts",
-    "test": "npm run lint && npm run build",
+    "test": "npm run lint && npm run build && npm run webpack-build",
     "prettify": "prettier --config ./node_modules/resin-lint/config/.prettierrc --write \"{src,test,typings}/**/*.ts\""
   },
   "dependencies": {
@@ -46,16 +49,16 @@
     "eventemitter3": "^3.1.0",
     "express-session": "^1.15.6",
     "husky": "^1.3.1",
-    "lint-staged": "^8.1.1",
+    "lint-staged": "^8.1.3",
     "lodash": "^4.17.11",
     "memoizee": "^0.4.14",
     "pinejs-client-core": "^5.3.6",
-    "prettier": "^1.16.1",
+    "prettier": "^1.16.4",
     "typed-error": "^2.0.0"
   },
   "devDependencies": {
     "@types/grunt": "^0.4.24",
-    "@types/webpack": "^1.12.36",
+    "@types/webpack": "^2.2.16",
     "coffee-loader": "^0.9.0",
     "grunt": "^1.0.3",
     "grunt-check-dependencies": "^1.0.0",
@@ -66,19 +69,19 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-gitinfo": "^0.1.8",
     "grunt-rename": "^0.1.4",
+    "grunt-text-replace": "^0.4.0",
     "grunt-ts": "^6.0.0-beta.22",
-    "grunt-webpack": "^1.0.18",
-    "json-loader": "^0.5.7",
+    "grunt-webpack": "^2.0.1",
     "load-grunt-tasks": "^4.0.0",
     "raw-loader": "^0.5.1",
     "require-npm4-to-publish": "^1.0.0",
     "resin-lint": "^2.0.1",
     "ts-loader": "^3.5.0",
-    "typescript": "^3.2.4",
+    "typescript": "^3.3.1",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "umd-require-webpack-plugin": "0.0.1",
-    "webpack": "^1.15.0",
-    "webpack-dev-server": "^1.16.5"
+    "webpack": "^2.7.0",
+    "webpack-dev-server": "^2.11.3"
   },
   "optionalDependencies": {
     "bcrypt": "^3.0.1",
