--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "webpack-module": "grunt module",
     "webpack-server": "grunt server",
     "webpack-build": "npm run webpack-browser && npm run webpack-module && npm run webpack-server",
-    "lint": "resin-lint src && resin-lint --typescript src build Gruntfile.ts",
+    "lint": "resin-lint src && resin-lint --typescript src build typings Gruntfile.ts",
     "test": "npm run lint && npm run build && npm run webpack-build",
-    "prettify": "prettier --config ./node_modules/resin-lint/config/.prettierrc --write \"{src,test,typings}/**/*.ts\""
+    "prettify": "prettier --config ./node_modules/resin-lint/config/.prettierrc --write \"{build,src,test,typings}/**/*.ts\" Gruntfile.ts"
   },
   "dependencies": {
     "@resin/abstract-sql-compiler": "^6.3.6",
@@ -58,7 +58,7 @@
   },
   "devDependencies": {
     "@types/grunt": "^0.4.24",
-    "@types/webpack": "^2.2.16",
+    "@types/webpack": "^3.8.17",
     "coffee-loader": "^0.9.0",
     "grunt": "^1.0.3",
     "grunt-check-dependencies": "^1.0.0",
@@ -80,8 +80,8 @@
     "typescript": "^3.3.1",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "umd-require-webpack-plugin": "0.0.1",
-    "webpack": "^2.7.0",
-    "webpack-dev-server": "^2.11.3"
+    "webpack": "^3.12.0",
+    "webpack-dev-server": "^3.1.14"
   },
   "optionalDependencies": {
     "bcrypt": "^3.0.1",
