--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "@types/passport-local": "1.0.33",
     "@types/passport-strategy": "^0.2.35",
     "@types/pg": "^6.1.47",
-    "@types/uglifyjs-webpack-plugin": "^1.1.0",
     "@types/websql": "0.0.27",
     "bluebird": "^3.5.3",
     "coffeescript": "^2.3.2",
@@ -58,6 +57,7 @@
   },
   "devDependencies": {
     "@types/grunt": "^0.4.24",
+    "@types/terser-webpack-plugin": "^1.2.0",
     "@types/webpack": "^4.4.24",
     "coffee-loader": "^0.9.0",
     "grunt": "^1.0.3",
@@ -76,9 +76,9 @@
     "raw-loader": "^1.0.0",
     "require-npm4-to-publish": "^1.0.0",
     "resin-lint": "^2.0.1",
+    "terser-webpack-plugin": "^1.2.2",
     "ts-loader": "^5.3.3",
     "typescript": "^3.3.1",
-    "uglifyjs-webpack-plugin": "^1.3.0",
     "umd-require-webpack-plugin": "0.0.1",
     "webpack": "^4.29.1",
     "webpack-dev-server": "^3.1.14"
