--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@resin/abstract-sql-compiler": "^6.4.0",
     "@resin/lf-to-abstract-sql": "^2.1.0",
     "@resin/odata-parser": "^1.0.1",
-    "@resin/odata-to-abstract-sql": "^3.0.1",
+    "@resin/odata-to-abstract-sql": "^3.1.0",
     "@resin/sbvr-parser": "^0.2.1",
     "@resin/sbvr-types": "^2.0.2",
     "@types/bluebird": "^3.5.25",
@@ -31,7 +31,7 @@
     "@types/deep-freeze": "^0.1.1",
     "@types/express": "4.16.0",
     "@types/express-session": "^1.15.12",
-    "@types/lodash": "^4.14.122",
+    "@types/lodash": "4.14.122",
     "@types/memoizee": "0.4.2",
     "@types/method-override": "0.0.31",
     "@types/multer": "1.3.7",
