Update npm namespace
Change-type: patch
Signed-off-by: Juan Cruz Viotti <juan@balena.io>

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@resin/pinejs",
+  "name": "@balena.io/pinejs",
   "version": "10.11.2",
   "main": "out/server-glue/module",
   "repository": "git@github.com:resin-io/pinejs.git",
