--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@resin/abstract-sql-compiler": "^6.4.0",
     "@resin/lf-to-abstract-sql": "^2.1.0",
     "@resin/odata-parser": "^1.0.1",
-    "@resin/odata-to-abstract-sql": "^3.1.0",
+    "@resin/odata-to-abstract-sql": "^3.1.1",
     "@resin/sbvr-parser": "^0.2.1",
     "@resin/sbvr-types": "^2.0.2",
     "@types/bluebird": "^3.5.25",
@@ -31,12 +31,12 @@
     "@types/deep-freeze": "^0.1.1",
     "@types/express": "4.16.0",
     "@types/express-session": "^1.15.12",
-    "@types/lodash": "4.14.122",
+    "@types/lodash": "^4.14.123",
     "@types/memoizee": "0.4.2",
     "@types/method-override": "0.0.31",
     "@types/multer": "1.3.7",
     "@types/mysql": "0.0.34",
-    "@types/node": "^6.14.4",
+    "@types/node": "^6.14.6",
     "@types/passport": "^0.3.5",
     "@types/passport-local": "1.0.33",
     "@types/passport-strategy": "^0.2.35",
@@ -45,7 +45,7 @@
     "bluebird": "^3.5.3",
     "coffeescript": "^2.4.0",
     "deep-freeze": "0.0.1",
-    "eventemitter3": "^3.1.0",
+    "eventemitter3": "^3.1.2",
     "express-session": "^1.15.6",
     "lodash": "^4.17.11",
     "memoizee": "^0.4.14",
@@ -55,7 +55,7 @@
   "devDependencies": {
     "@types/grunt": "^0.4.24",
     "@types/terser-webpack-plugin": "^1.2.1",
-    "@types/webpack": "^4.4.26",
+    "@types/webpack": "^4.4.29",
     "coffee-loader": "^0.9.0",
     "grunt": "^1.0.4",
     "grunt-check-dependencies": "^1.0.0",
@@ -77,8 +77,8 @@
     "require-npm4-to-publish": "^1.0.0",
     "resin-lint": "^2.0.1",
     "terser-webpack-plugin": "^1.2.3",
-    "ts-loader": "^5.3.3",
-    "typescript": "^3.4.3",
+    "ts-loader": "^5.4.5",
+    "typescript": "^3.4.5",
     "umd-require-webpack-plugin": "0.0.1",
     "webpack": "^4.29.6",
     "webpack-dev-server": "^3.3.1"
