--- a/package.json
+++ b/package.json
@@ -22,18 +22,18 @@
     "prettify": "prettier --config ./node_modules/resin-lint/config/.prettierrc --write \"{build,src,test,typings}/**/*.ts\" Gruntfile.ts"
   },
   "dependencies": {
-    "@resin/abstract-sql-compiler": "^6.4.0",
+    "@resin/abstract-sql-compiler": "^6.4.2",
     "@resin/lf-to-abstract-sql": "^2.1.0",
-    "@resin/odata-parser": "^1.0.1",
-    "@resin/odata-to-abstract-sql": "^3.1.1",
-    "@resin/sbvr-parser": "^0.2.1",
-    "@resin/sbvr-types": "^2.0.2",
+    "@resin/odata-parser": "^1.0.3",
+    "@resin/odata-to-abstract-sql": "^3.1.2",
+    "@resin/sbvr-parser": "^0.2.2",
+    "@resin/sbvr-types": "^2.0.3",
     "@types/bluebird": "^3.5.25",
     "@types/body-parser": "1.17.0",
     "@types/compression": "0.0.36",
     "@types/cookie-parser": "1.4.1",
     "@types/deep-freeze": "^0.1.1",
-    "@types/express": "4.16.0",
+    "@types/express": "^4.16.1",
     "@types/express-session": "^1.15.12",
     "@types/lodash": "4.14.123",
     "@types/memoizee": "0.4.2",
@@ -54,13 +54,13 @@
     "express-session": "^1.15.6",
     "lodash": "^4.17.11",
     "memoizee": "^0.4.14",
-    "pinejs-client-core": "^5.3.6",
+    "pinejs-client-core": "^5.5.1",
     "typed-error": "^2.0.0"
   },
   "devDependencies": {
     "@types/grunt": "^0.4.24",
     "@types/terser-webpack-plugin": "^1.2.1",
-    "@types/webpack": "^4.4.29",
+    "@types/webpack": "^4.4.31",
     "coffee-loader": "^0.9.0",
     "grunt": "^1.0.4",
     "grunt-check-dependencies": "^1.0.0",
@@ -74,18 +74,18 @@
     "grunt-text-replace": "^0.4.0",
     "grunt-ts": "^6.0.0-beta.22",
     "grunt-webpack": "^3.1.3",
-    "husky": "^1.3.1",
-    "lint-staged": "^8.1.6",
+    "husky": "^2.3.0",
+    "lint-staged": "^8.1.7",
     "load-grunt-tasks": "^4.0.0",
-    "prettier": "^1.16.4",
-    "raw-loader": "^1.0.0",
+    "prettier": "^1.17.1",
+    "raw-loader": "^2.0.0",
     "require-npm4-to-publish": "^1.0.0",
     "resin-lint": "^2.0.1",
-    "terser-webpack-plugin": "^1.2.3",
+    "terser-webpack-plugin": "^1.2.4",
     "ts-loader": "^5.4.5",
     "typescript": "^3.4.5",
     "umd-require-webpack-plugin": "0.0.1",
-    "webpack": "^4.29.6",
+    "webpack": "^4.31.0",
     "webpack-dev-server": "^3.3.1"
   },
   "optionalDependencies": {
