--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@types/deep-freeze": "^0.1.1",
     "@types/express": "^4.16.1",
     "@types/express-session": "^1.15.12",
-    "@types/lodash": "4.14.123",
+    "@types/lodash": "^4.14.133",
     "@types/memoizee": "0.4.2",
     "@types/method-override": "0.0.31",
     "@types/multer": "1.3.7",
