--- a/package.json
+++ b/package.json
@@ -22,29 +22,29 @@
     "prettify": "prettier --config ./node_modules/resin-lint/config/.prettierrc --write \"{build,src,test,typings}/**/*.ts\" Gruntfile.ts"
   },
   "dependencies": {
-    "@resin/abstract-sql-compiler": "^6.8.0",
+    "@resin/abstract-sql-compiler": "^6.8.1",
     "@resin/lf-to-abstract-sql": "^2.1.0",
     "@resin/odata-parser": "^1.2.2",
     "@resin/odata-to-abstract-sql": "^4.1.0",
     "@resin/sbvr-parser": "^0.2.3",
     "@resin/sbvr-types": "^2.0.3",
     "@types/bluebird": "^3.5.27",
-    "@types/body-parser": "1.17.0",
+    "@types/body-parser": "^1.17.1",
     "@types/compression": "0.0.36",
-    "@types/cookie-parser": "1.4.1",
+    "@types/cookie-parser": "^1.4.2",
     "@types/deep-freeze": "^0.1.2",
     "@types/express": "^4.17.1",
     "@types/express-session": "^1.15.14",
     "@types/lodash": "^4.14.138",
-    "@types/memoizee": "0.4.2",
+    "@types/memoizee": "^0.4.3",
     "@types/method-override": "0.0.31",
-    "@types/multer": "1.3.7",
+    "@types/multer": "^1.3.9",
     "@types/mysql": "0.0.34",
     "@types/node": "^6.14.6",
     "@types/passport": "^0.3.5",
     "@types/passport-local": "1.0.33",
     "@types/passport-strategy": "^0.2.35",
-    "@types/pg": "^7.11.0",
+    "@types/pg": "^7.11.1",
     "@types/websql": "0.0.27",
     "bluebird": "^3.5.5",
     "coffeescript": "^2.4.0",
@@ -83,7 +83,7 @@
     "resin-lint": "^2.0.1",
     "terser-webpack-plugin": "^1.4.1",
     "ts-loader": "^5.4.5",
-    "typescript": "^3.6.2",
+    "typescript": "^3.6.3",
     "umd-require-webpack-plugin": "0.0.1",
     "webpack": "^4.39.3",
     "webpack-dev-server": "^3.8.0"
