--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "prettify": "prettier --config ./node_modules/resin-lint/config/.prettierrc --write \"{build,src,test,typings}/**/*.ts\" Gruntfile.ts"
   },
   "dependencies": {
-    "@resin/abstract-sql-compiler": "^6.9.1",
+    "@resin/abstract-sql-compiler": "^6.9.2",
     "@resin/lf-to-abstract-sql": "^2.1.0",
     "@resin/odata-parser": "^1.2.3",
     "@resin/odata-to-abstract-sql": "^4.1.2",
@@ -30,28 +30,28 @@
     "@resin/sbvr-types": "^2.0.3",
     "@types/bluebird": "^3.5.27",
     "@types/body-parser": "^1.17.1",
-    "@types/compression": "0.0.36",
+    "@types/compression": "^1.0.1",
     "@types/cookie-parser": "^1.4.2",
     "@types/deep-freeze": "^0.1.2",
     "@types/express": "^4.17.1",
     "@types/express-session": "^1.15.14",
-    "@types/lodash": "^4.14.138",
+    "@types/lodash": "^4.14.144",
     "@types/memoizee": "^0.4.3",
     "@types/method-override": "0.0.31",
-    "@types/multer": "^1.3.9",
+    "@types/multer": "^1.3.10",
     "@types/mysql": "0.0.34",
     "@types/node": "^6.14.6",
     "@types/passport": "^0.3.5",
     "@types/passport-local": "1.0.33",
     "@types/passport-strategy": "^0.2.35",
-    "@types/pg": "^7.11.1",
+    "@types/pg": "^7.11.2",
     "@types/websql": "0.0.27",
-    "bluebird": "^3.5.5",
+    "bluebird": "^3.7.0",
     "coffeescript": "^2.4.0",
-    "commander": "^3.0.0",
+    "commander": "^3.0.2",
     "deep-freeze": "0.0.1",
     "eventemitter3": "^4.0.0",
-    "express-session": "^1.16.2",
+    "express-session": "^1.17.0",
     "lodash": "^4.17.15",
     "memoizee": "^0.4.14",
     "pinejs-client-core": "^5.6.0",
@@ -60,7 +60,7 @@
   "devDependencies": {
     "@types/grunt": "^0.4.24",
     "@types/terser-webpack-plugin": "^1.2.1",
-    "@types/webpack": "^4.39.1",
+    "@types/webpack": "^4.39.3",
     "coffee-loader": "^0.9.0",
     "grunt": "^1.0.4",
     "grunt-check-dependencies": "^1.0.0",
@@ -83,10 +83,10 @@
     "resin-lint": "^2.0.1",
     "terser-webpack-plugin": "^1.4.1",
     "ts-loader": "^5.4.5",
-    "typescript": "^3.6.3",
+    "typescript": "^3.6.4",
     "umd-require-webpack-plugin": "0.0.1",
-    "webpack": "^4.40.2",
-    "webpack-dev-server": "^3.8.1"
+    "webpack": "^4.41.1",
+    "webpack-dev-server": "^3.8.2"
   },
   "optionalDependencies": {
     "bcrypt": "^3.0.1",
