--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,6 +1,5 @@
 {
 	"*.ts": [
-		"prettier --config ./node_modules/resin-lint/config/.prettierrc --write",
-		"resin-lint --typescript --no-prettier"
+		"resin-lint --typescript --fix"
 	],
 }
