--- a/package.json
+++ b/package.json
@@ -19,18 +19,18 @@
     "webpack-build": "npm run webpack-browser && npm run webpack-module && npm run webpack-server",
     "lint": "resin-lint src && resin-lint --typescript src build typings Gruntfile.ts",
     "test": "npm run lint && npm run build && npm run webpack-build",
-    "prettify": "prettier --config ./node_modules/resin-lint/config/.prettierrc --write \"{build,src,test,typings}/**/*.ts\" Gruntfile.ts"
+    "prettify": "resin-lint --typescript --fix src build typings Gruntfile.ts"
   },
   "dependencies": {
-    "@resin/abstract-sql-compiler": "^6.11.4",
+    "@resin/abstract-sql-compiler": "^6.13.0",
     "@resin/lf-to-abstract-sql": "^3.1.1",
     "@resin/odata-parser": "^1.3.1",
-    "@resin/odata-to-abstract-sql": "^4.2.1",
+    "@resin/odata-to-abstract-sql": "^4.3.0",
     "@resin/sbvr-parser": "^0.2.7",
     "@resin/sbvr-types": "^2.0.4",
     "@types/bluebird": "^3.5.29",
-    "@types/body-parser": "^1.17.1",
-    "@types/compression": "^1.0.1",
+    "@types/body-parser": "^1.19.0",
+    "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/deep-freeze": "^0.1.2",
     "@types/express": "^4.17.2",
@@ -38,9 +38,9 @@
     "@types/lodash": "^4.14.149",
     "@types/memoizee": "^0.4.3",
     "@types/method-override": "0.0.31",
-    "@types/multer": "^1.4.0",
+    "@types/multer": "^1.4.2",
     "@types/mysql": "0.0.34",
-    "@types/node": "^10.17.14",
+    "@types/node": "^10.17.16",
     "@types/passport": "^0.4.7",
     "@types/passport-local": "1.0.33",
     "@types/passport-strategy": "^0.2.35",
@@ -54,13 +54,13 @@
     "express-session": "^1.17.0",
     "lodash": "^4.17.15",
     "memoizee": "^0.4.14",
-    "pinejs-client-core": "^5.6.5",
+    "pinejs-client-core": "^5.6.11",
     "typed-error": "^3.2.0"
   },
   "devDependencies": {
     "@types/grunt": "^0.4.24",
     "@types/terser-webpack-plugin": "^2.2.0",
-    "@types/webpack": "^4.41.5",
+    "@types/webpack": "^4.41.6",
     "coffee-loader": "^0.9.0",
     "grunt": "^1.0.4",
     "grunt-check-dependencies": "^1.0.0",
@@ -74,18 +74,17 @@
     "grunt-text-replace": "^0.4.0",
     "grunt-ts": "^6.0.0-beta.22",
     "grunt-webpack": "^3.1.3",
-    "husky": "^4.2.1",
+    "husky": "^4.2.3",
     "lint-staged": "^10.0.7",
     "load-grunt-tasks": "^5.1.0",
-    "prettier": "^1.19.1",
     "raw-loader": "^4.0.0",
     "require-npm4-to-publish": "^1.0.0",
-    "resin-lint": "^2.0.1",
-    "terser-webpack-plugin": "^2.3.4",
+    "resin-lint": "^3.3.0",
+    "terser-webpack-plugin": "^2.3.5",
     "ts-loader": "^6.2.1",
-    "typescript": "^3.7.5",
+    "typescript": "^3.8.2",
     "umd-require-webpack-plugin": "0.0.1",
-    "webpack": "^4.41.5",
+    "webpack": "^4.41.6",
     "webpack-dev-server": "^3.10.3"
   },
   "optionalDependencies": {
