--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "webpack-module": "grunt module",
     "webpack-server": "grunt server",
     "webpack-build": "npm run webpack-browser && npm run webpack-module && npm run webpack-server",
-    "lint": "resin-lint src && resin-lint --typescript src build typings Gruntfile.ts",
+    "lint": "balena-lint src && balena-lint --typescript src build typings Gruntfile.ts",
     "test": "npm run lint && npm run build && npm run webpack-build",
-    "prettify": "resin-lint --typescript --fix src build typings Gruntfile.ts"
+    "prettify": "balena-lint --typescript --fix src build typings Gruntfile.ts"
   },
   "dependencies": {
     "@resin/abstract-sql-compiler": "^6.13.2",
@@ -27,7 +27,7 @@
     "@resin/odata-parser": "^1.4.0",
     "@resin/odata-to-abstract-sql": "^4.4.0",
     "@resin/sbvr-parser": "^0.2.7",
-    "@resin/sbvr-types": "^2.0.4",
+    "@resin/sbvr-types": "^2.0.5",
     "@types/bluebird": "^3.5.30",
     "@types/body-parser": "^1.19.0",
     "@types/compression": "^1.7.0",
@@ -40,7 +40,7 @@
     "@types/method-override": "0.0.31",
     "@types/multer": "^1.4.2",
     "@types/mysql": "0.0.34",
-    "@types/node": "^10.17.17",
+    "@types/node": "^10.17.18",
     "@types/passport": "^0.4.7",
     "@types/passport-local": "1.0.33",
     "@types/passport-strategy": "^0.2.35",
@@ -58,9 +58,10 @@
     "typed-error": "^3.2.0"
   },
   "devDependencies": {
+    "@balena/lint": "^4.1.1",
     "@types/grunt": "^0.4.24",
     "@types/terser-webpack-plugin": "^2.2.0",
-    "@types/webpack": "^4.41.7",
+    "@types/webpack": "^4.41.10",
     "coffee-loader": "^0.9.0",
     "grunt": "^1.1.0",
     "grunt-check-dependencies": "^1.0.0",
@@ -75,16 +76,15 @@
     "grunt-ts": "^6.0.0-beta.22",
     "grunt-webpack": "^3.1.3",
     "husky": "^4.2.3",
-    "lint-staged": "^10.0.8",
+    "lint-staged": "^10.1.1",
     "load-grunt-tasks": "^5.1.0",
     "raw-loader": "^4.0.0",
     "require-npm4-to-publish": "^1.0.0",
-    "resin-lint": "^3.3.1",
     "terser-webpack-plugin": "^2.3.5",
-    "ts-loader": "^6.2.1",
+    "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
     "umd-require-webpack-plugin": "0.0.1",
-    "webpack": "^4.42.0",
+    "webpack": "^4.42.1",
     "webpack-dev-server": "^3.10.3"
   },
   "optionalDependencies": {
