--- a/circle.yml
+++ b/circle.yml
@@ -10,12 +10,6 @@ buildSteps: &buildSteps
       command: npm test --loglevel warn
 
 jobs:
-  node-8:
-    docker:
-      - image: circleci/node:8
-    working_directory: ~/node-8
-    steps: *buildSteps
-
   node-10:
     docker:
       - image: circleci/node:10
@@ -28,22 +22,16 @@ jobs:
     working_directory: ~/node-12
     steps: *buildSteps
 
+  node-14:
+    docker:
+      - image: circleci/node:14
+    working_directory: ~/node-14
+    steps: *buildSteps
+
 workflows:
   version: 2
   build:
     jobs:
-      - node-8:
-          # Run for all tags (required to allow the deploy to trigger on version tags)
-          filters:
-            tags:
-              only: /.*/
-      - node-10:
-          # Run for all tags (required to allow the deploy to trigger on version tags)
-          filters:
-            tags:
-              only: /.*/
-      - node-12:
-          # Run for all tags (required to allow the deploy to trigger on version tags)
-          filters:
-            tags:
-              only: /.*/
+      - node-10
+      - node-12
+      - node-14
