--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "prettify": "balena-lint -e js -e ts --typescript --fix src build typings Gruntfile.ts"
   },
   "dependencies": {
-    "@resin/abstract-sql-compiler": "^6.13.4",
+    "@resin/abstract-sql-compiler": "^6.13.5",
     "@resin/lf-to-abstract-sql": "^3.2.3",
     "@resin/odata-parser": "^1.4.1",
     "@resin/odata-to-abstract-sql": "^4.4.5",
     "@resin/sbvr-parser": "^0.2.8",
-    "@resin/sbvr-types": "^2.0.7",
+    "@resin/sbvr-types": "^2.0.9",
     "@types/bluebird": "^3.5.30",
     "@types/body-parser": "^1.19.0",
     "@types/compression": "^1.7.0",
@@ -39,7 +39,7 @@
     "@types/memoizee": "^0.4.4",
     "@types/method-override": "0.0.31",
     "@types/multer": "^1.4.3",
-    "@types/mysql": "0.0.34",
+    "@types/mysql": "^2.15.10",
     "@types/node": "^10.17.21",
     "@types/passport": "^0.4.7",
     "@types/passport-local": "1.0.33",
@@ -48,7 +48,7 @@
     "@types/websql": "0.0.27",
     "bluebird": "^3.7.2",
     "coffeescript": "^2.5.1",
-    "commander": "^4.1.1",
+    "commander": "^5.1.0",
     "deep-freeze": "0.0.1",
     "eventemitter3": "^4.0.0",
     "express-session": "^1.17.1",
@@ -78,8 +78,8 @@
     "load-grunt-tasks": "^5.1.0",
     "raw-loader": "^4.0.1",
     "require-npm4-to-publish": "^1.0.0",
-    "terser-webpack-plugin": "^2.3.6",
-    "ts-loader": "^6.2.2",
+    "terser-webpack-plugin": "^3.0.1",
+    "ts-loader": "^7.0.3",
     "typescript": "^3.8.3",
     "umd-require-webpack-plugin": "0.0.1",
     "webpack": "^4.43.0",
