--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@balena/lf-to-abstract-sql": "^4.0.0",
     "@balena/odata-parser": "^2.0.0",
     "@balena/sbvr-parser": "^1.0.1",
+    "@balena/sbvr-types": "^3.1.0",
     "@resin/odata-to-abstract-sql": "^4.5.3",
-    "@resin/sbvr-types": "^2.0.9",
     "@types/bluebird": "^3.5.32",
     "@types/body-parser": "^1.19.0",
     "@types/compression": "^1.7.0",
@@ -87,7 +87,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "optionalDependencies": {
-    "bcrypt": "^3.0.8",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
