--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/passport-local": "1.0.33",
     "@types/passport-strategy": "^0.2.35",
     "@types/pg": "^7.14.3",
+    "@types/randomstring": "^1.1.6",
     "@types/websql": "0.0.27",
     "bluebird": "^3.7.2",
     "coffeescript": "^2.5.1",
@@ -55,6 +56,7 @@
     "lodash": "^4.17.15",
     "memoizee": "^0.4.14",
     "pinejs-client-core": "^5.7.0",
+    "randomstring": "^1.1.5",
     "typed-error": "^3.2.0"
   },
   "devDependencies": {
@@ -81,7 +83,6 @@
     "terser-webpack-plugin": "^3.0.1",
     "ts-loader": "^7.0.4",
     "typescript": "^3.9.3",
-    "umd-require-webpack-plugin": "0.0.1",
     "webpack": "^4.43.0",
     "webpack-dev-server": "^3.11.0"
   },
