--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "require-npm4-to-publish": "^1.0.0",
     "terser-webpack-plugin": "^4.1.0",
     "ts-loader": "^8.0.3",
+    "ts-node": "^9.0.0",
     "typescript": "^4.0.2",
     "webpack": "^4.44.1",
     "webpack-dev-server": "^3.11.0"
@@ -98,8 +99,7 @@
     "passport-local": "^1.0.0",
     "pg": "^8.3.3",
     "pg-connection-string": "^2.3.0",
-    "serve-static": "^1.14.1",
-    "ts-node": "^9.0.0"
+    "serve-static": "^1.14.1"
   },
   "engines": {
     "node": ">=10.0.0",
