--- a/package.json
+++ b/package.json
@@ -71,8 +71,8 @@
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-rename": "^0.2.0",
     "grunt-gitinfo": "^0.1.9",
-    "grunt-rename": "^0.1.4",
     "grunt-text-replace": "^0.4.0",
     "grunt-ts": "^6.0.0-beta.22",
     "grunt-webpack": "^4.0.2",
