--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "prettify": "balena-lint -e js -e ts --fix src build typings Gruntfile.ts"
   },
   "dependencies": {
-    "@balena/abstract-sql-compiler": "^7.22.0",
+    "@balena/abstract-sql-compiler": "8.0.0-true-boolean-5914ecfede7efc56e38162b4f9dfa5e19f0d0792",
     "@balena/abstract-sql-to-typescript": "^1.3.0",
     "@balena/lf-to-abstract-sql": "^4.5.5",
     "@balena/odata-parser": "^2.4.2",
-    "@balena/odata-to-abstract-sql": "^5.7.0",
+    "@balena/odata-to-abstract-sql": "5.5.0-true-boolean-1f122cf6c4e926a394461a680464a9029ae7f8ca",
     "@balena/sbvr-parser": "^1.4.2",
-    "@balena/sbvr-types": "^3.4.15",
+    "@balena/sbvr-types": "4.0.0-true-boolean-4d20b304f0092f3c3bbe389588059c11e679e08d",
     "@types/body-parser": "^1.19.2",
     "@types/compression": "^1.7.2",
     "@types/cookie-parser": "^1.4.3",
