--- a/package.json
+++ b/package.json
@@ -26,32 +26,32 @@
     "@balena/abstract-sql-compiler": "^7.13.1",
     "@balena/abstract-sql-to-typescript": "^1.1.1",
     "@balena/lf-to-abstract-sql": "^4.3.0",
-    "@balena/odata-parser": "^2.2.5",
+    "@balena/odata-parser": "^2.2.6",
     "@balena/odata-to-abstract-sql": "^5.4.2",
     "@balena/sbvr-parser": "^1.2.5",
     "@balena/sbvr-types": "^3.4.4",
-    "@types/bluebird": "^3.5.35",
-    "@types/body-parser": "^1.19.0",
-    "@types/compression": "^1.7.0",
+    "@types/bluebird": "^3.5.36",
+    "@types/body-parser": "^1.19.1",
+    "@types/compression": "^1.7.1",
     "@types/cookie-parser": "^1.4.2",
     "@types/deep-freeze": "^0.1.2",
-    "@types/express": "^4.17.12",
-    "@types/express-session": "^1.17.3",
-    "@types/lodash": "^4.14.170",
-    "@types/memoizee": "^0.4.5",
-    "@types/method-override": "0.0.31",
-    "@types/multer": "^1.4.6",
-    "@types/mysql": "^2.15.18",
-    "@types/node": "^12.20.15",
+    "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
+    "@types/lodash": "^4.14.171",
+    "@types/memoizee": "^0.4.6",
+    "@types/method-override": "^0.0.32",
+    "@types/multer": "^1.4.7",
+    "@types/mysql": "^2.15.19",
+    "@types/node": "^12.20.16",
     "@types/passport": "^0.4.7",
-    "@types/passport-local": "1.0.33",
+    "@types/passport-local": "^1.0.34",
     "@types/passport-strategy": "^0.2.35",
-    "@types/pg": "^8.6.0",
-    "@types/randomstring": "^1.1.6",
-    "@types/websql": "0.0.27",
+    "@types/pg": "^8.6.1",
+    "@types/randomstring": "^1.1.7",
+    "@types/websql": "^0.0.27",
     "bluebird": "^3.7.2",
     "commander": "^7.2.0",
-    "deep-freeze": "0.0.1",
+    "deep-freeze": "^0.0.1",
     "eventemitter3": "^4.0.7",
     "express-session": "^1.17.2",
     "lodash": "^4.17.21",
@@ -62,9 +62,9 @@
   },
   "devDependencies": {
     "@balena/lint": "^6.1.1",
-    "@types/grunt": "^0.4.24",
-    "@types/terser-webpack-plugin": "^4.2.1",
-    "@types/webpack": "^4.41.29",
+    "@types/grunt": "^0.4.27",
+    "@types/terser-webpack-plugin": "^4.2.2",
+    "@types/webpack": "^4.41.30",
     "grunt": "^1.4.1",
     "grunt-check-dependencies": "^1.0.0",
     "grunt-cli": "^1.4.3",
