--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
 		"strict": true,
 		"strictFunctionTypes": false,
 		"strictPropertyInitialization": false,
+		"useUnknownInCatchVariables": false,
 		"noImplicitThis": false,
 		"noUnusedParameters": true,
 		"noUnusedLocals": true,
