--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lint": "balena-lint -e js -e ts src build typings Gruntfile.ts && npx tsc --project tsconfig.dev.json --noEmit",
     "test": "npm run lint && npm run build && npm run webpack-build",
     "prettify": "balena-lint -e js -e ts --fix src build typings Gruntfile.ts",
-    "compile-odata": "node ./bin/abstract-sql-compiler.js generate-odata ../balena-api/.materialized-config.json ./model.odata"
+    "compile-odata": "node ./bin/abstract-sql-compiler.js generate-odata .materialized-config.json ./model.odata"
   },
   "dependencies": {
     "@balena/abstract-sql-compiler": "^7.17.1",
