inital test framework for pinejs
Addind mocha, ts-node and chai to  pinejs.
Utilising docker-compose to handle test requirements like db

Change-type: minor
Signed-off-by: Harald Fischer <harald@balena.io>

--- a/repo.yml
+++ b/repo.yml
@@ -1,4 +1,4 @@
-type: 'node'
+type: 'docker-compose'
 upstream:
   - repo: '@balena/abstract-sql-compiler'
     url: 'https://github.com/balena-io-modules/abstract-sql-compiler'
